Добавлена тексты и рандомное их выведение, а так же оформление

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,53 @@
+body
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    padding: 0 10%
+    font-family: sans-serif
+    font-weight: 500
+    font-size: 25px
+    background: url(../img/bg.jpg) no-repeat 
+    background-size: cover
+    color: #5c5c5c
+    
 .incorrect
-    background-color: red
+    background-color: #f36747
+    color: white
+
 
 .correct
-    background-color: green
+    background-color: #5bc538
+    color: white
 
-div 
-    font-size: 25px
+.random-text
+    display: none
+
+.main
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 90vh
+
+.timer
+    display: flex
+    width: 20%
+    justify-content: center
+    background-color: #fff
+    padding: 50px
+    border-radius: 0 10px 10px 0
+
+.header
+    height: 10vh
+    display: flex
+    align-items: center
+    font-size: 35px
+    color: white
+    font-weight: 700
+
+.text
+    width: 80%
+    background-color: #fff
+    padding: 50px
+    border-radius: 10px
+    line-height: 35px
+
